added GitHub link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <h1>World Clock 🕰️</h1>
     <footer>
-      This project was coded by Munia Sircar, open sourced on GitHub.
+      This project was coded by Munia Sircar, open sourced on
+      <a href="https://github.com/Munia-Sircar/world-clock-ms" target="_blank"
+        >GitHub</a
+      >.
     </footer>
     <script src="index.js"></script>
   </body>
