--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       This project was coded by Munia Sircar, open sourced on
       <a href="https://github.com/Munia-Sircar/world-clock-ms" target="_blank"
         >GitHub</a
-      >.
+      >
+      and hosted on
+      <a href="https://world-clock-ms-project.netlify.app/" target="_blank"></a
+      >Netlify.
     </footer>
     <script src="index.js"></script>
   </body>
