Added basic HTML

--- a/index.html
+++ b/index.html
@@ -7,15 +7,36 @@
     <title>World Clock - Munia</title>
   </head>
   <body>
-    <h1>World Clock 🕰️</h1>
+    <div class="container">
+      <h1>World Clock 🕰️</h1>
+
+      <select name="" id="">
+        <option value="">Select a city...</option>
+        <option value="">Winnipeg</option>
+        <option value="">Chittagong</option>
+        <option value="">Tokyo</option>
+      </select>
+
+      <div class="city">
+        <h2>Paris</h2>
+        <div class="date">September 16, 2025</div>
+        <div class="time">10:30 PM</div>
+      </div>
+      <div class="city">
+        <h2>Rome</h2>
+        <div class="date">September 16, 2025</div>
+        <div class="time">10:30:15 PM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Munia Sircar, open sourced on
       <a href="https://github.com/Munia-Sircar/world-clock-ms" target="_blank"
         >GitHub</a
       >
       and hosted on
-      <a href="https://world-clock-ms-project.netlify.app/" target="_blank"></a
-      >Netlify.
+      <a href="https://world-clock-ms-project.netlify.app/" target="_blank"
+        >Netlify</a
+      >.
     </footer>
     <script src="index.js"></script>
   </body>
