Added CSS styling

--- a/index.html
+++ b/index.html
@@ -18,18 +18,22 @@
       </select>
 
       <div class="city">
-        <h2>Paris</h2>
-        <div class="date">September 16, 2025</div>
-        <div class="time">10:30 PM</div>
+        <div>
+          <h2>Paris</h2>
+          <div class="date">September 16, 2025</div>
+        </div>
+        <div class="time">10:30:25 <small>PM</small></div>
       </div>
       <div class="city">
-        <h2>Rome</h2>
-        <div class="date">September 16, 2025</div>
-        <div class="time">10:30:15 PM</div>
+        <div>
+          <h2>Sydney</h2>
+          <div class="date">September 16, 2025</div>
+        </div>
+        <div class="time">10:30:25 <small>PM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded by Munia Sircar, open sourced on
+      This project was coded by <strong>Munia Sircar</strong>, open sourced on
       <a href="https://github.com/Munia-Sircar/world-clock-ms" target="_blank"
         >GitHub</a
       >
