Updated JS with current time and function

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock - Munia</title>
   </head>
   <body>
@@ -17,16 +19,16 @@
         <option value="">Tokyo</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="dhaka">
         <div>
-          <h2>Paris</h2>
+          <h2>Dhaka</h2>
           <div class="date">September 16, 2025</div>
         </div>
         <div class="time">10:30:25 <small>PM</small></div>
       </div>
-      <div class="city">
+      <div class="city" id="bermuda">
         <div>
-          <h2>Sydney</h2>
+          <h2>Bermuda</h2>
           <div class="date">September 16, 2025</div>
         </div>
         <div class="time">10:30:25 <small>PM</small></div>
