added functionality in the select with multiple locations

--- a/index.html
+++ b/index.html
@@ -12,26 +12,28 @@
     <div class="container">
       <h1>World Clock 🕰️</h1>
 
-      <select name="" id="">
+      <select name="" id="choose-city">
         <option value="">Select a city...</option>
-        <option value="">Winnipeg</option>
-        <option value="">Chittagong</option>
-        <option value="">Tokyo</option>
+        <option value="America/Winnipeg">Winnipeg</option>
+        <option value="Antarctica/Troll">Troll</option>
+        <option value="Asia/Tokyo">Tokyo</option>
       </select>
 
-      <div class="city" id="dhaka">
-        <div>
-          <h2>Dhaka</h2>
-          <div class="date">September 16, 2025</div>
+      <div class="cities" id="cities">
+        <div class="city" id="dhaka">
+          <div>
+            <h2>Dhaka</h2>
+            <div class="date">September 16, 2025</div>
+          </div>
+          <div class="time">10:30:25 <small>PM</small></div>
         </div>
-        <div class="time">10:30:25 <small>PM</small></div>
-      </div>
-      <div class="city" id="bermuda">
-        <div>
-          <h2>Bermuda</h2>
-          <div class="date">September 16, 2025</div>
+        <div class="city" id="bermuda">
+          <div>
+            <h2>Bermuda</h2>
+            <div class="date">September 16, 2025</div>
+          </div>
+          <div class="time">10:30:25 <small>PM</small></div>
         </div>
-        <div class="time">10:30:25 <small>PM</small></div>
       </div>
     </div>
     <footer>
