Added my current location option

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
       <select name="" id="choose-city">
         <option value="">Select a city...</option>
-        <option value="America/Winnipeg">Winnipeg</option>
+        <option value="current">My Location</option>
+        <option value="Europe/Zaporozhye">Zaporozhye</option>
         <option value="Antarctica/Troll">Troll</option>
         <option value="Asia/Tokyo">Tokyo</option>
       </select>
