Finishing CSS styling

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       <select name="" id="choose-city">
         <option value="">Select a city...</option>
         <option value="current">My Location</option>
-        <option value="Europe/Zaporozhye">Zaporozhye</option>
-        <option value="Antarctica/Troll">Troll</option>
-        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Europe/Rome">Rome</option>
+        <option value="Africa/Casablanca">Casablanca</option>
+        <option value="Indian/Maldives">Maldives</option>
+        <option value="Asia/Shanghai">Shanghai</option>
+        <option value="Pacific/Fiji">Fiji</option>
       </select>
 
       <div class="cities" id="cities">
@@ -35,10 +37,18 @@
           </div>
           <div class="time">10:30:25 <small>PM</small></div>
         </div>
+        <div class="city" id="darwin">
+          <div>
+            <h2>Darwin</h2>
+            <div class="date">September 16, 2025</div>
+          </div>
+          <div class="time">10:30:25 <small>PM</small></div>
+        </div>
       </div>
     </div>
     <footer>
-      This project was coded by <strong>Munia Sircar</strong>, open sourced on
+      This project was coded by <strong>Munia Sircar<span>🌹</span></strong
+      >, open sourced on
       <a href="https://github.com/Munia-Sircar/world-clock-ms" target="_blank"
         >GitHub</a
       >
